[gd_scene load_steps=8 format=3 uid="uid://bqhxt7gb5wk6k"]

[ext_resource type="Script" path="res://Scripts/Weapon.gd" id="1_tixmt"]
[ext_resource type="Texture2D" uid="uid://cxatdlxifijuf" path="res://Assets/Objects/tank_arrowFull.png" id="3_0lv07"]

[sub_resource type="SpriteFrames" id="SpriteFrames_fluyv"]
animations = []

[sub_resource type="Animation" id="Animation_0y10n"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("MuzzleFlash:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}

[sub_resource type="Animation" id="Animation_u67qg"]
resource_name = "muzzle_flash"
length = 0.05
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("MuzzleFlash:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.05),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("MuzzleFlash:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.05),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0.15, 0.15), Vector2(0.2, 0.06)]
}

[sub_resource type="Animation" id="Animation_bohev"]
resource_name = "reload"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5, 1),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [0.0, -1.5708, 0.0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_xxdq5"]
_data = {
"RESET": SubResource("Animation_0y10n"),
"muzzle_flash": SubResource("Animation_u67qg"),
"reload": SubResource("Animation_bohev")
}

[node name="BaseWeapon" type="Node2D"]
script = ExtResource("1_tixmt")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_fluyv")
animation = &""
offset = Vector2(40, 0)

[node name="MuzzleFlash" type="Sprite2D" parent="."]
visible = false
position = Vector2(70, -6)
rotation = 3.14159
scale = Vector2(0.15, 0.15)
texture = ExtResource("3_0lv07")

[node name="FirePoint" type="Marker2D" parent="."]
position = Vector2(63, -6)

[node name="GunDirection" type="Marker2D" parent="."]
position = Vector2(68, -6)

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_xxdq5")
}

[node name="AttackCooldown" type="Timer" parent="."]

[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_animation_player_animation_finished"]
